--- a/gb/23/12/26/n14144143.md
+++ b/gb/23/12/26/n14144143.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>赖清德：坚定抵抗极权 守护台湾主权跟民主</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/12/id14144145-ad13ad731aac77c685f20be8bd19b97e-600x400.jpg" />
 <h6>第二场总统候选人政见发表会26日在中视举行，民进党总统候选人赖清德在政见会后发表谈话。（戴德蔓/大纪元）
 </h6>
 <hr>
-<p>【大纪元2023年12月27日讯】（大纪元记者戴德蔓台湾台北报导）台湾第二场总统政见发表会26日下午登场，民进党总统候选人<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%B5%96%E6%B8%85%E5%BE%B7.md#1">赖清德</a>第一轮发言时表示，这场选举每一个人都非常重要，如果少了您，台湾的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%BB%E6%9D%83.md#1">主权</a>、台湾的民主就会受到伤害，他强调当总统会坚定抵抗极权主义的扩张，坚定守护国家的主权跟民主。</p>
-<p><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%80%BB%E7%BB%9F%E5%A4%A7%E9%80%89.md#1">总统大选</a>第2场电视政见发表会26日下午登场，民众党总统候选人柯文哲、国民党总统候选人侯友宜、民进党总统候选人<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%B5%96%E6%B8%85%E5%BE%B7.md#1">赖清德</a>3人再度同场交锋；政见会抽签的发言顺序为柯文哲、侯友宜、赖清德。</p>
+<p>【大纪元2023年12月27日讯】（大纪元记者戴德蔓台湾台北报导）台湾第二场总统政见发表会26日下午登场，民进党总统候选人赖清德第一轮发言时表示，这场选举每一个人都非常重要，如果少了您，台湾的主权、台湾的民主就会受到伤害，他强调当总统会坚定抵抗极权主义的扩张，坚定守护国家的主权跟民主。</p>
+<p>总统大选第2场电视政见发表会26日下午登场，民众党总统候选人柯文哲、国民党总统候选人侯友宜、民进党总统候选人赖清德3人再度同场交锋；政见会抽签的发言顺序为柯文哲、侯友宜、赖清德。</p>
 <p>赖清德第一轮发言时说明他启动四天三夜的环岛大拼图活动，“唱土地的歌，拼咱的希望”的初衷，总统要提出国家愿景蓝图以及国家建设计划，用具体行动带给人民希望。</p>
 <p>他说，一个县市一个字，一天一句标语，希望各县市父老乡亲，能在这场关系台湾前途、后代子孙幸福，也会影响印太和平的重大选举中都能够挺身而出，选对的人，走对的路；“让美德赢台湾，让台湾赢得美”。</p>
 <p>赖清德说，他到每个县市发表“均衡台湾国家建设计划”，将善用每县市的资源，给予适当的定位，加上产业、交通、医疗、文化、观光、居住、水环境等重大建设，不遗漏任何一个城市，让每个县市都能发挥潜力。</p>
@@ -15,8 +15,8 @@
 <p>赖清德说，他当总统一定会好好照顾人民，会在蔡英文总统的基础上扩大对社会的投资，他提出投资0到22岁的完整计划，加薪减税少负担。推动“0到6岁国家一起养2.0”以及“长照3.0”来减轻三明治家庭（上有老、下有小）的负担。长照3.0会特别强调公立安养中心的设置，让民众可以用最便宜的负担来解决照顾长辈的问题。也会推动青年百亿海外圆梦基金，帮助青年圆梦，走入世界，增广见闻。</p>
 <p>赖清德说，会推动教育平权，他说柯文哲第一轮所提出来的教育政见，不是现在政府正在做，就是他的政见已经提出了。他强调，不应该因为社经机会的不同，造成社经地位弱势的孩子在取得教育资源的时候发生困难，所以从明年开始，高中职全面免学费，弱势家庭年收入不到新台币70万元的，不管是念公立或私立，每个孩子每年每人补助2万元，年收入70万元到90万元之间的，不管念公立或念私立，每人每年补助1万5000元。</p>
 <p>赖清德表示，他会推动居住正义照顾年轻人所面临的居住问题，第一个就是囤房税2.0，就是用全国总归户，利用房屋税的差别税率，来遏止恶意的炒房，让房价能够恢复正常，这一点立法院最近已经三读通过，即将实施。此外，他也会优化青年安家贷款，额度由800万元到1000万元，利息补贴由现在的办法再加1码，总共0.375%，让有志于购买房屋的年轻人完成梦想。</p>
-<p>有关<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A4%BE%E4%BC%9A%E4%BD%8F%E5%AE%85.md#1">社会住宅</a>，赖清德说，蔡英文总统承诺在八年任内要推动20万户的社会住宅，在明年520卸任之前，现在之前新建的不管是完成，或是已经完成发包有12万多户，包租代管将有8万多户，换句话说20万户的社会住宅不会跳票。</p>
-<p>外界关注的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A4%BE%E4%BC%9A%E4%BD%8F%E5%AE%85.md#1">社会住宅</a>部分，他表示，蔡总统承诺在8年任内要推动20万户的社会住宅，而在蔡总统卸任前不会跳票，他未来也会以8年为期规划，新建的住宅有13万多户，包租代管会有17万户，总共会有30万户。</p>
+<p>有关社会住宅，赖清德说，蔡英文总统承诺在八年任内要推动20万户的社会住宅，在明年520卸任之前，现在之前新建的不管是完成，或是已经完成发包有12万多户，包租代管将有8万多户，换句话说20万户的社会住宅不会跳票。</p>
+<p>外界关注的社会住宅部分，他表示，蔡总统承诺在8年任内要推动20万户的社会住宅，而在蔡总统卸任前不会跳票，他未来也会以8年为期规划，新建的住宅有13万多户，包租代管会有17万户，总共会有30万户。</p>
 <p>至于土地如何取得？赖清德说，可由中央或是地方政府推动区段征收或市地重划的时候，非直辖市可以提供3%的土地面积，直辖市可以提供5%的土地面积来盖社会住宅。</p>
 <p>他举新北市为例，目前正在进行塭仔圳的重划，面积共有400公顷，只要拿5％的土地来盖社会住宅，就可以再增加一万多户的社会住宅，这远比目前侯市长只规划2100户要来多得多。</p>
 <p>赖清德强调，如果地方政府或者是侯市长他不愿意这样做，或者是没有能力这样做，可以把土地用原价卖给中央，由清德来兴建。<br />
@@ -24,44 +24,41 @@
 <p>赖清德强调，如果地方政府或是侯友宜不愿意这样做，或者没有能力这样做，可以把土地用原价卖给中央，就由他来兴建。</p>
 <p>责任编辑：于曼</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/21/n14140476.md#1">赖清德：亲中路线对台湾造成冲击</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/21/n14140477.md#1">赖清德：万里老家交付公益信托 作“矿工生活纪念馆”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/21/n14140519.md#1">赖清德：接受中共会兔死狗烹殷鉴不远</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/21/n14141153.md#1">环岛拼图首站抵宜兰 赖清德：坚定走民主道路意志</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/24/n14142974.md#1">环岛拼图最终站 赖清德推台北“4大引擎”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/24/n14142977.md#1">忍无可忍 赖清德老家邻居吁勿再污蔑</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/25/n14143485.md#1">赖竞总：赖清德老家自47年起就存在</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/26/n14144065.md#1">总统政见发表会 柯侯赖核能议题交锋</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/26/n14144076.md#1">赖清德盘点国民党对台湾伤害：忘了蒋经国反共路线</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/26/n14144056.md#1">中开放石斑蓝营邀功 陈骏季：中共将农产当筹码</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/12/21/n14140476.md#1">赖清德：亲中路线对台湾造成冲击</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/12/21/n14140477.md#1">赖清德：万里老家交付公益信托 作“矿工生活纪念馆”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/12/21/n14140519.md#1">赖清德：接受中共会兔死狗烹殷鉴不远</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/12/21/n14141153.md#1">环岛拼图首站抵宜兰 赖清德：坚定走民主道路意志</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/12/24/n14142974.md#1">环岛拼图最终站 赖清德推台北“4大引擎”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/12/24/n14142977.md#1">忍无可忍 赖清德老家邻居吁勿再污蔑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/12/25/n14143485.md#1">赖竞总：赖清德老家自47年起就存在</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309785.md#1">澳门逼签一中承诺书 立委：不乐见撤馆</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309794.md#1">朱立伦：盼明年成立体育部</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309808.md#1">柯文哲遭指政治献金申报不实 朱立伦吁尽快厘清</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/17/11/15/n9844503.md#1" target="_blank">毛泽东诗词的“血旗情结”</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/11/12/n10846893.md#1" target="_blank">律师依法为法轮功做无罪辩护 遭中共打压</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/12/9/n11709371.md#1" target="_blank">袁斌：汉学家林培瑞认清中共谎言的觉醒之路</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/6/29/n11353494.md#1" target="_blank">章天亮：倾国家之力的迫害</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/27/n14144650.md#1">【全球新闻】以色列开启七线作战 重申停战条件</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/27/n14144647.md#1">【晚间新闻】走线暴涨10倍 中共解体前难民潮？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/26/n14144113.md#1">【菁英论坛】2024中国三大劫 2025或新人登基</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/21/n14141385.md#1">【未解之谜】留意！它们发出的预警信号</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/20/n14139954.md#1">【古道人生】穷女婿被岳父辱骂 反而得了大财</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136260.md#1">血红天空 雷打雪  亡朝前夕怪异天象知多少？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/8/n14132350.md#1">他进到了寺院的壁画中  老僧说了一句“幻由心生”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137486.md#1">良玉不琢不成器 太上老君寻传人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/27/n14144260.md#1">【新闻看点】党内挑战习路线 政治局谁在反习？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/26/n14143970.md#1">【军事热点】俄一天损失三架Su-34后 又添一架</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/26/n14143792.md#1">【中国禁闻】财新社论疑批习遭封杀</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/25/n14143372.md#1">甘肃村民：不地震没人知道我们有多穷</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/25/n14143230.md#1">运行一个月 中国造曼谷粉线铁轨高空坠落</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/24/n14143091.md#1">韩红团队震区救灾被禁 甘肃红会丑闻曝光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/24/n14143117.md#1">韩红甘肃救灾疑被官方关闭筹款通道 网民热议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/26/n14144188.md#1">亲共艺人黄安不满中国除夕不放假 网民热议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/26/n14144122.md#1">港星卢惠光前妻黎淑贤家中烧炭 送院抢救不治</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/24/n14143090.md#1">韩国偶像中安俞真最忙 一年竟有477个行程</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/24/n14142994.md#1">安柏赫德在《水行侠2》戏份减少 仅剩11句对白</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/19/11/28/n11686220.md#1">全球美味圣诞大餐 各国都吃什么？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">PURE AROMA纯精油6件礼品组合装 50%折扣</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/3/n14109301.md#1">14个圣诞传统美食的故事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/14/n14115912.md#1">瘦不下来？人类犯了一件最不该犯的错！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14105768.md#1">选择适合自己的中医断食 168方案轻松做</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306413.md#1">立秋的著名成语  传递什么警讯？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305642.md#1">宋孝宗“竞选”皇位  一猫和十美女如何起作用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309049.md#1">目睹圣母玛利亚雕像眨眼睛 美俄州民众称奇迹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304683.md#1">【未解之谜】灵异阿拉斯加 黑暗金字塔的秘密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308837.md#1">【探索时分】台湾拟采购鹰眼E2D 能否探测歼20？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308276.md#1">珍珠粉有助延缓衰老 改善睡眠 预防骨质疏松</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308560.md#1">【车评】红章的“R” 2024 Honda Civic Type R</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308388.md#1">为何外国航空公司纷纷从中国撤出</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308523.md#1">北戴河会议不轻松？中共党媒头版现异常?</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308069.md#1">巴黎奥运世界各国总排名、台湾历届奥运奖牌榜一次看</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308335.md#1">周子瑜谈个子高的坏处 与志效公开真实身高</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307988.md#1">子瑜感谢志效领导TWICE 难忘成员来家里玩</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308115.md#1">Netflix遭遇最严重的动画泄密盗版事件</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308447.md#1">章子怡带8岁女儿看话剧 母女俩装扮精致</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308804.md#1">“七夕”最惨新片 《多多是条狗》票房仅300元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308042.md#1">什么是“慢购物” 为何它能抢救你的荷包？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309023.md#1">研究发现最可能发生车祸时段 开车务必小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306576.md#1">蛋壳粉含丰富营养素 强健骨骼牙齿和护肤</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308504.md#1">午睡太久会失智！ 这个时间点小睡片刻最好</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307005.md#1">星巴克控必知 TOP7健康饮品及点餐5技巧</a></li>
 <hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/12/26/n14144143.htm">赖清德：坚定抵抗极权 守护台湾主权跟民主</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/12/26/n14144143.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/12/26/n14144143.htm">赖清德：坚定抵抗极权 守护台湾主权跟民主</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/12/26/n14144143.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
